--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.87 0 0);
+  --muted: oklch(0.9 0 0);
   --muted-foreground: oklch(0.456 0 0);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
@@ -154,6 +154,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Prose overrides */
+
 @utility prose {
   --tw-prose-body: var(--muted-foreground);
   --tw-prose-headings: var(--foreground);
@@ -174,8 +176,14 @@ body {
   --tw-prose-th-borders: var(--border);
   --tw-prose-td-borders: var(--border);
 
+  @apply max-w-[80ch];
+
+  h1 {
+    @apply text-3xl font-normal font-serif mb-20;
+  }
+
   h2 {
-    @apply text-xl font-medium;
+    @apply text-xl font-medium font-serif;
   }
 
   code {
@@ -184,6 +192,7 @@ body {
       display: none;
     }
     text-wrap: nowrap;
+    font-weight: 400;
   }
 
   blockquote {
