--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(0.958 0.006 264.531);
+  --background: oklch(0.97 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -32,8 +32,8 @@ body {
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.9 0 0);
-  --muted-foreground: oklch(0.456 0 0);
+  --muted: oklch(0.922 0 0);
+  --muted-foreground: oklch(0.456 0.006 264.531);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
@@ -147,13 +147,6 @@ body {
   }
 }
 
-:root {
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 /* Prose overrides */
 
 @utility prose {
@@ -161,7 +154,7 @@ body {
   --tw-prose-headings: var(--foreground);
   --tw-prose-lead: var(--muted-foreground);
   --tw-prose-links: currentColor;
-  --tw-prose-bold: var(--foreground);
+  --tw-prose-bold: var(--muted-foreground);
   --tw-prose-counters: var(--muted-foreground);
   --tw-prose-bullets: var(--muted-foreground);
   --tw-prose-hr: var(--border);
@@ -179,11 +172,15 @@ body {
   @apply max-w-[80ch];
 
   h1 {
-    @apply text-3xl font-normal font-serif mb-20;
+    @apply text-3xl font-normal font-serif mb-20 text-pretty leading-relaxed -mt-2;
   }
 
   h2 {
     @apply text-xl font-medium font-serif;
+  }
+
+  p {
+    @apply text-pretty;
   }
 
   code {
